2005-11-17  Michael Natterer  <mitch@gimp.org>

	* app/actions/window-actions.[ch]: connect to GdkDisplayManager
	and automatically add/remove move-to-screen actions when
	displays are opened/closed.

	* app/menus/window-menu.c: added similar code here to add/remove
	menu items for the above actions.

	* app/actions/Makefile.am
	* app/actions/window-commands.[ch]: new files containing window
	close and move-to-screen callbacks. There is no need to implement
	these twice for GimpDock and GimpDisplay.

	* app/actions/dock-commands.[ch]
	* app/actions/view-commands.[ch]: remove the callbacks here.

	* app/actions/dock-actions.c
	* app/actions/view-actions.c: changed accordingly.

2005-11-16  Manish Singh  <yosh@gimp.org>

	* plug-ins/common/curve_bend.c (p_gimp_rotate): use
	gimp_drawable_transform_rotate_default instead of deprecated
	gimp-rotate PDB call. Fixes bug #321692.

2005-11-16  Sven Neumann  <sven@gimp.org>

	* libgimpbase/gimpenv.c (gimp_toplevel_directory)
	* app/widgets/gimpcolormapeditor.c (gimp_colormap_editor_draw_cell):
	plugged memory leaks.

2005-11-16  Michael Natterer  <mitch@gimp.org>

	* app/core/gimplayer.c (gimp_layer_convert):
	gimp_layer_transform_color() wants the destination image passed,
	not the source image.

2005-11-16  Sven Neumann  <sven@gimp.org>

	* libgimpbase/gimpreloc.c: minor cleanups.

2005-11-15  Michael Natterer  <mitch@gimp.org>

	Allow to construct a group of radio actions in multiple chunks.
	(not used yet).

	* app/widgets/gimpactiongroup.[ch]
	(gimp_action_group_add_radio_actions): added "GSList *radio_group"
	parameter and return value.

	* app/actions/dockable-actions.c
	* app/actions/gradient-editor-actions.c
	* app/actions/quick-mask-actions.c
	* app/actions/text-editor-actions.c
	* app/actions/view-actions.c
	* app/actions/window-actions.c: pass NULL as radio_group.

2005-11-15  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpcontainercombobox.c: implement